<resources>
    <string name="app_name">rVendas</string>
    <string name="title_add_money_list">Entradas  %1$s</string>
    <string name="title_remove_money_list">Retiradas  %1$s</string>
    <string name="title_opening_list">Saldo inicial  %1$s</string>
    <string name="title_add_money_register_add">Adicionar entrada</string>
    <string name="title_add_money_register_edit">Editar entrada</string>
    <string name="title_remove_money_register_add">Adicionar retirada</string>
    <string name="title_remove_money_register_edit">Editar retirada</string>
    <string name="title_client_add">Adicionar Cliente</string>
    <string name="title_client_edit">Editar Cliente</string>
    <string name="title_product_register_add">Adicionar produto</string>
    <string name="title_product_register_edit">Editar produto</string>
    <string name="title_sell_add">Adicionar venda</string>
    <string name="title_sell_edit">Editar venda</string>
    <string name="title_opening_register_add">Adicionar saldo inicial</string>
    <string name="title_opening_register_edit">Editar saldo inicial</string>
    <string name="title_product_list_sell">Produtos cadastrados</string>
    <string name="title_product_list">Produtos</string>
    <string name="title_closed">Caixa  %1$s</string>
    <string name="title_client_list">Clientes</string>
    <string name="title_client_list_sell">Clientes Cadastrados</string>
    <string name="title_changed_money">Troco</string>
    <string name="title_settings">Configurações</string>
    <string name="save_title_menu">Salvar</string>
    <string name="date_title_menu">Data</string>
    <string name="search_title_menu">Pesquisar</string>
    <string name="export_title_menu">Exportar BACKUP</string>
    <string name="import_title_menu">Restaurar BACKUP</string>
    <string name="fone_title_menu">Ligar</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="menu_add_money_title_drawer">Entrada</string>
    <string name="menu_remove_money_title_drawer">Retirada</string>
    <string name="menu_balance_start_title_drawer">Saldo inicial</string>
    <string name="menu_closed_title_drawer">Fechamento</string>
    <string name="menu_product_title_drawer">Produtos</string>
    <string name="menu_client_title_drawer">Clientes</string>
    <string name="menu_registers_title_drawer">Cadastros</string>
    <string name="menu_box_title_drawer">Caixa</string>
    <string name="menu_outher_title_drawer">Outros</string>
    <string name="menu_settings_title_drawer">Configurações</string>
    <string name="menu_exit_title_drawer">Sair</string>
    <string name="descr_add_money_empty">Imagem de um cifrão e um seta para cima</string>
    <string name="descr_hand_money_empty">Imagem de uma mão clicando</string>
    <string name="descr_remove_money_empty">Imagem de um cifrão e um seta para baixo</string>
    <string name="descr_opening_empty">Imagem de duas mãos segurando um cifrão</string>
    <string name="descr_product_empty">Imagem de código de barras</string>
    <string name="descr_product_sale_empty">Imagem de um coração partido</string>
    <string name="descr_client_empty">Imagem de uma interrogação</string>
    <string name="descr_logo">Logotipo da empresa. Um bolo saindo fumaça.</string>
    <string name="descr_main_empty">Imagem de um bolo</string>
    <string name="descr_rm">Rm Vendas</string>
    <string name="descr_woman">Uma confeiteira</string>
    <string name="text_receive_list_empty">Beleza!!!   Uhull !!! \nEsse cliente nunca comprou fiado!!!</string>
    <string name="text_add_money_empty">Eita!!!  \nHoje você não cadastrou nenhuma entrada, ainda !!!</string>
    <string name="text_remove_money_empty">Beleza!!! \nNão foi presciso fazer nenhuma retirada hoje !!!</string>
    <string name="text_opening_empty">Vamos incluir o saldo inicial do dia ???</string>
    <string name="text_product_empty">Como vender?\nNenhum produto cadastrado ainda !!!</string>
    <string name="text_product_sale_empty">Que pena!!! Você não pode vender, ainda.\nVocê não tem nenhum produto cadastrado!!!</string>
    <string name="text_main_empty"> Ei, psiu!!! \nVamos fazer a primeira venda hoje !!!</string>
    <string name="text_client_search_empty">Adicione esse cliente.\nAinda não tem nenhum cliente com esse nome.</string>
    <string name="text_change_value_sale">Valor da Venda</string>
    <string name="text_change_clear">Limpar</string>
    <string name="text_receive_credit">Recebimento</string>
    <string name="text_receive_debit">Venda</string>
    <string name="text_receive_decription_card">NO CARTÃO - </string>
    <string name="text_receiv_list_balance">Saldo: %1$s</string>
    <string name="text_receiv_list_balance_empty">Não há registros!!!</string>
    <string name="text_forward_sell">Venda a prazo  -  %1$s  %2$s</string>
    <string name="text_change_value_larger">Esse valor deve ser igual ou maior que %1$s </string>
    <string name="text_change_label_change_value">O valor do Troco é:</string>
    <string name="text_client_list_empty">Uai!  Cadê os clientes ?\nQue pena, ainda nenhum cliente cadastrado !!!</string>
    <string name="text_delete_item_sale">%1$s %2$s</string>
    <string name="text_delete_item_sale_receive">%1$s %2$s\n\nTambém será excluído o registro \'a prazo\', dessa venda.</string>
    <string name="text_closed_client_name_forward">%1$s \n </string>
    <string name="text_add">Adicional</string>
    <string name="text_discount">Desconto</string>
    <string name="text_card">Cartão</string>
    <string name="text_forward">A prazo</string>
    <string name="text_client">Cliente</string>
    <string name="text_receive_add_money_description">Recebi.: %1$s - %2$s</string>
    <string name="text_receive_add_money_toast">Pagamento de %1$s adicionado nas ENTRADAS do dia.</string>
    <string name="text_item_price">SubTotal..:  %1$s</string>
    <string name="text_item_value_add">Adicional.:  %1$s</string>
    <string name="text_item_value_discount">Desconto.:  %1$s</string>
    <string name="text_item_value_total">Total.......:  %1$s</string>
    <string name="text_item_value_in_cash">A vista....:  %1$s</string>
    <string name="text_item_value_forward">A prazo…:  %1$s</string>
    <string name="text_item_value_card">Cartão....:  %1$s</string>
    <string name="text_item_client_name_forward">Cliente.....:  %1$s</string>
    <string name="text_closed_title_balance">Saldo</string>
    <string name="text_closed_title_cashmove">Movimento de caixa </string>
    <string name="text_closed_title_info_add">Informações Adicionais </string>
    <string name="text_closed_title_client">Clientes - Venda a prazo </string>
    <string name="text_closed_client_name">%1$s</string>
    <string name="text_closed_add_money">Entradas.............:    %1$s</string>
    <string name="text_closed_remove_money">Retiradas............:    %1$s</string>
    <string name="text_closed_balance_start">Saldo inicial........:    %1$s</string>
    <string name="text_closed_sale">Vendas...............:    %1$s</string>
    <string name="text_closed_sale_in_cash">Vendas a vista.....:    %1$s</string>
    <string name="text_closed_sale_total">Total vendas........:    %1$s</string>
    <string name="text_closed_quantity_product_sold">Vendidos............:    %1$s</string>
    <string name="text_closed_quantity_product_sold_in_cash">Vendidos a vista..:    %1$s</string>
    <string name="text_closed_add">Adicional............:    %1$s</string>
    <string name="text_closed_discount">Descontos...........:    %1$s</string>
    <string name="text_closed_forward">A prazo...............:    %1$s</string>
    <string name="text_closed_cartao">Cartão................:    %1$s</string>
    <string name="text_closed_balance_end">Saldo final..........:    %1$s</string>
    <string name="hint_value">Valor R$</string>
    <string name="hint_description">Descrição</string>
    <string name="hitn_client_name">Nome do Cliente</string>
    <string name="hitn_client_fone">Nº Telefone</string>
    <string name="hint_change_value_amount">Valor Recebido</string>
    <string name="hint_product_name">Nome</string>
    <string name="hint_product_price">Preço R$</string>
    <string name="hint_quantity">Quantidade</string>
    <string name="hint_company_cnpj">CNPJ</string>
    <string name="msg_insert_sucess">Inserido com sucesso</string>
    <string name="msg_insert_error">Erro ao inserir</string>
    <string name="msg_edit_sucess">Editado com sucesso</string>
    <string name="msg_edit_error">Erro ao editar</string>
    <string name="msg_wait">Aguarde!!!</string>
    <string name="msg_delete_export_product">Preparando para sistema para fazer BACKUP.</string>
    <string name="msg_init_export_product">Fazendo BACKUP. Exportando sua lista de produtos.</string>
    <string name="msg_init_import_product">Restaurar BACKUP. Baixando sua lista de produtos.</string>
    <string name="msg_import_product_null">Não há BACKUP salvo, para restaurar.</string>
    <string name="msg_export_id_name">%1$s - %2$s.</string>
    <string name="msg_digite_cnpj">Digite o CNPJ da empresa que você trabalha para confimar a importação.</string>
    <string name="msg_export_sucess">Backup realizado com sucesso.</string>
    <string name="msg_sucess_insert_product">%1$s produtos de um total de %2$s, foram inseridos com sucesso.</string>
    <string name="dialog_alteration_title">Descartar as alterações?</string>
    <string name="dialog_alteration_continue">Continuar editando</string>
    <string name="dialog_alteration_discart">Descartar</string>
    <string name="dialog_sync_product_title"> Produtos</string>
    <string name="dialog_sync_export_product_message">Fazer BACKUP dos produtos</string>
    <string name="dialog_sync_cancel">Cancelar</string>
    <string name="dialog_sync_confirm">Confirmar</string>
    <string name="dialog_edit_del_title">O que deseja?</string>
    <string name="dialog_edit_del_conf_delete_title">Realmente deseja excluir?</string>
    <string name="dialog_edit_del_sucess">Registro excluido com sucesso</string>
    <string name="dialog_edit_del_error">Erro ao excluir o registro </string>
    <string name="dialog_edit_del_conf_delete_del">Excluir</string>
    <string name="dialog_edit_del_conf_delete_cancel">Cancelar</string>
    <string name="dialog_edit_del_conf_credit">Cliente não pode ser excluido. Tem crédito no valor : %1$s</string>
    <string name="dialog_edit_del_conf_debt">Cliente não pode ser excluido. Tem dívida no valor : %1$s</string>
    <string name="dialog_edit_del_message_delete_opening">
        Saldo inicial
        \n\nValor: %1$s
        \n\nData: %2$s
    </string>
    <string name="dialog_edit_del_message_delete_add_remove_money">
        Descrição: %1$s
        \n\nValor: %2$s
        \n\nHora: %3$s
    </string>
    <string name="dialog_excluir_produtos_list">
        Nome:  %1$s
        \n\n
        Valor:   %2$s
    </string>
    <string name="dialog_edit_del_message_delete_receive">
        Cliente: %1$s
        \n\nTipo: %2$s
        \n\nDescrição: %3$s
        \n\nValor: %4$s
        \n\nData: %5$s
    </string>
    <string name="dialog_inf_title_add_money">Entradas</string>
    <string name="dialog_inf_title_remove_money">Retiradas</string>
    <string name="dialog_inf_title_opening">Saldo Inicial</string>
    <string name="dialog_inf_title_product">Produtos</string>
    <string name="pref_title_compnay_name">Nome da Empresa</string>
    <string name="pref_key_compnay_name" translatable="false">company_name</string>
    <string name="pref_title_cnpj">CNPJ da Empresa</string>
    <string name="pref_key_cnpj" translatable="false">company_cnpj</string>
    <string name="pref_title_cpf">CPF do usuário</string>
    <string name="pref_key_cpf" translatable="false">user_cpf</string>
</resources>