<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_box_title_drawer">
        <menu>
            <item
                android:id="@+id/nav_action_entrada"
                android:icon="@drawable/ic_add_circle_black"
                android:title="@string/menu_add_money_title_drawer" />
            <item
                android:id="@+id/nav_Action_retirada"
                android:icon="@drawable/ic_remove_circle_black"
                android:title="@string/menu_remove_money_title_drawer" />
            <item
                android:id="@+id/nav_action_saldo_inicial"
                android:icon="@drawable/ic_money_receive_black"
                android:title="@string/menu_balance_start_title_drawer" />
            <item
                android:id="@+id/nav_action_fechamento"
                android:icon="@drawable/ic_calculator_black"
                android:title="@string/menu_closed_title_drawer" />
        </menu>
    </item>

    <item android:title="@string/menu_registers_title_drawer">
        <menu>
            <item
                android:id="@+id/nav_action_list_clientes"
                android:icon="@drawable/ic_people_black"
                android:title="@string/menu_client_title_drawer" />

            <item
                android:id="@+id/nav_action_list_prod"
                android:icon="@drawable/ic_barcode_black"
                android:title="@string/menu_product_title_drawer" />

        </menu>
    </item>


    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_action_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/menu_settings_title_drawer" />

        </menu>
    </item>

</menu>
