<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_default_36"
    android:paddingEnd="@dimen/margin_default_24"
    android:paddingStart="@dimen/margin_default_24"
    android:paddingTop="@dimen/margin_default_36"
    tools:context="com.pedromoreirareisgmail.rmvendas.activitys.RegisterReceiveActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_12">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_receive_value"
            style="@style/editNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_value"
            android:imeOptions="actionNext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_32">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_receive_description"
            style="@style/editTexts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_description"
            android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_receive_debit"
            style="@style/butRed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/text_receive_debit" />

        <Button
            android:id="@+id/but_receive_credit"
            style="@style/butBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/text_receive_credit" />

    </LinearLayout>


</LinearLayout>
