<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_16"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_8"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_change_amount_received"
                    style="@style/editNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_default_16"
                    android:hint="@string/hint_change_value_amount"
                    android:imeOptions="actionDone"
                    android:maxLength="12"
                    android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:text="@string/text_change_value_sale"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv_change_value_sale"
                    style="@style/textViewBold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/margin_default_8"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/but_change_clear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_default_16"
            android:layout_marginTop="@dimen/margin_default_48"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/text_change_clear"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_change_value_change_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_8"
            android:fontFamily="serif-monospace"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_change_value_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:contentDescription="@string/descr_logo"
        android:src="@drawable/logo_rm" />

</RelativeLayout>
